--- a/src/Akka.Persistence.PostgreSql.Tests/Akka.Persistence.PostgreSql.Tests.csproj
+++ b/src/Akka.Persistence.PostgreSql.Tests/Akka.Persistence.PostgreSql.Tests.csproj
@@ -2,12 +2,12 @@
 
   <Import Project="..\common.props" />
   <PropertyGroup>
-    <TargetFrameworks>net452;netcoreapp1.1</TargetFrameworks>
     <IsPackable>false</IsPackable>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka.Persistence.Sql.Common" Version="1.3.9" />
+    <PackageReference Include="Akka.Persistence.Sql.Common" Version="1.4.14" />
     <PackageReference Include="Akka.Persistence.Sql.TestKit" Version="1.3.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
